<resources>
    <string name="app_name">bca_s_application3</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_nike_air_max_270">Nike Air Max 270 React ENG</string>
  <string name="msg_june_3_2015_5_06">June 3, 2015 5:06 PM</string>
  <string name="lbl_ahmad_khaidir">Ahmad Khaidir</string>
  <string name="msg_fs_nike_air_max">FS - Nike Air Max 270 React...</string>
  <string name="lbl_free_returns">Free Returns</string>
  <string name="lbl_arriving">Arriving</string>
  <string name="lbl_work_equipment">Work Equipment</string>
  <string name="msg_this_is_really_amazing">This is really amazing product, i like the design of product, I hope can buy it again!</string>
  <string name="lbl_offer">Offer</string>
  <string name="msg_sign_in_to_continue">Sign in to continue</string>
  <string name="lbl_the_best_title">The Best Title</string>
  <string name="lbl_password_again">Password Again</string>
  <string name="lbl_shipping">Shipping</string>
  <string name="msg_don_t_have_an_account">Don\u2019t have an account? Register</string>
  <string name="lbl_all_listings">All Listings</string>
  <string name="lbl_nike_air_max">Nike Air Max</string>
  <string name="lbl_t_shirt">T-Shirt</string>
  <string name="lbl_new_password">New Password</string>
  <string name="lbl_6_5">6.5</string>
  <string name="lbl_phone_number">Phone Number</string>
  <string name="lbl_12_12_2000">12-12-2000</string>
  <string name="lbl_52">52</string>
  <string name="lbl_north_america">North America</string>
  <string name="lbl_edit">Edit</string>
  <string name="msg_have_an_account">Have an account? Sign In</string>
  <string name="lbl_order_status">Order Status</string>
  <string name="msg_enter_the_country">Enter the country or region</string>
  <string name="lbl_male">Male</string>
  <string name="lbl_12_12">12/12</string>
  <string name="lbl_auction">Auction</string>
  <string name="lbl_no_resi">No. Resi</string>
  <string name="lbl_import_charges">Import charges</string>
  <string name="lbl_price_range">Price Range</string>
  <string name="msg_december_10_2016">December 10, 2016</string>
  <string name="lbl_gender">Gender</string>
  <string name="lbl_last_name">Last Name</string>
  <string name="msg_authorized_seller">Authorized Seller</string>
  <string name="lbl_buy_it_now">Buy It Now</string>
  <string name="lbl_packing">Packing</string>
  <string name="lbl_1219">1219</string>
  <string name="msg_price_shipping2">Price + Shipping: highest first</string>
  <string name="lbl_date_shipping">Date Shipping</string>
  <string name="lbl_feed">Feed</string>
  <string name="msg_nike_air_max_2704">Nike Air Max 270 React</string>
  <string name="lbl_james_lawson">James Lawson</string>
  <string name="msg_nike_air_max_2703">Nike Air Max 270 React ENG </string>
  <string name="lbl_search_product">Search Product</string>
  <string name="lbl_sort_by">Sort By</string>
  <string name="msg_3711_spring_hill">3711 Spring Hill Rd undefined Tallahassee, Nevada 52874 United States</string>
  <string name="msg_nike_air_max_2702">Nike Air Max 270 Rea...</string>
  <string name="lbl_man_fashion">Man Fashion</string>
  <string name="lbl_delete">Delete</string>
  <string name="msg_enter_cupon_code">Enter Cupon Code</string>
  <string name="msg_transaction_nike2">Transaction Nike Air Max</string>
  <string name="msg_welcome_to_e_com">Welcome to E-com</string>
  <string name="lbl_7_5">7.5</string>
  <string name="msg_transaction_nike3">Transaction Nike Air Max 2</string>
  <string name="lbl_choose_card">Choose Card</string>
  <string name="lbl_06_24">06/24</string>
  <string name="lbl_filter_search">Filter Search</string>
  <string name="lbl_534_33">$534,33</string>
  <string name="lbl_34">34</string>
  <string name="lbl_card_number">Card Number</string>
  <string name="lbl_145_result">145 Result</string>
  <string name="lbl_dress">Dress</string>
  <string name="lbl_card_save">CARD SAVE</string>
  <string name="lbl_password">Password</string>
  <string name="msg_thank_you_for_shopping">thank you for shopping using lafyuu</string>
  <string name="lbl_1_245">$1.245</string>
  <string name="lbl_woman_fashion">Woman Fashion</string>
  <string name="lbl_man_shoes">Man Shoes</string>
  <string name="msg_new_password_again">New Password Again</string>
  <string name="lbl_used">Used</string>
  <string name="msg_enter_the_phone">Enter the phone number</string>
  <string name="lbl_write_review">Write Review</string>
  <string name="lbl_birthday">Birthday</string>
  <string name="msg_enter_the_zip_code">Enter the zip code</string>
  <string name="lbl_condition">Condition</string>
  <string name="lbl_apply">Apply</string>
  <string name="msg_write_your_review">Write Your Review</string>
  <string name="lbl_city">City</string>
  <string name="lbl_expiration_date">Expiration Date</string>
  <string name="lbl_your_email">Your Email</string>
  <string name="msg_nike_air_zoom_pegasus">Nike Air Zoom Pegasus 36 Miami</string>
  <string name="msg_nike_air_vapormax">Nike Air Vapormax 360</string>
  <string name="lbl_check_out">Check Out</string>
  <string name="lbl_category">Category</string>
  <string name="lbl_new_product">New Product</string>
  <string name="msg_time_newly_listed">Time: newly listed</string>
  <string name="msg_use_megsl_cupon">Use \u201cMEGSL\u201d Cupon For Get 90%off</string>
  <string name="lbl_4_5">4.5</string>
  <string name="lbl_change_password">Change Password</string>
  <string name="lbl_add_address">Add Address</string>
  <string name="lbl_sign_up">Sign Up</string>
  <string name="lbl_307_555_0133">(307) 555-0133</string>
  <string name="msg_lailyfa_febrina">Lailyfa Febrina Card</string>
  <string name="lbl_select_color">Select Color</string>
  <string name="msg_authenticity_verified">Authenticity Verified</string>
  <string name="msg_country_or_region">Country or region</string>
  <string name="lbl_back_to_order">Back To Order</string>
  <string name="lbl_pants">Pants</string>
  <string name="lbl_man_pants">Man Pants</string>
  <string name="lbl_man_t_shirt">Man T-Shirt</string>
  <string name="msg_don_t_have_an_account2">Don\u2019t have an account?</string>
  <string name="lbl_register">Register</string>
  <string name="lbl_best_match">Best Match</string>
  <string name="lbl_9_344">$9.344</string>
  <string name="lbl_save">Save</string>
  <string name="msg_90_off_super_mega">90% Off Super Mega Sale</string>
  <string name="lbl_success">Success</string>
  <string name="lbl_add_to_cart">Add To Cart</string>
  <string name="lbl_laura_octavian">Laura Octavian</string>
  <string name="lbl_payment_details">Payment Details</string>
  <string name="lbl_enter_the_city">Enter the city</string>
  <string name="lbl_08">08</string>
  <string name="lbl_europe">Europe</string>
  <string name="msg_enter_card_number">Enter Card Number</string>
  <string name="lbl_select_size">Select Size</string>
  <string name="msg_summer_offer_98">SUMMER OFFER 98% Cashback</string>
  <string name="msg_benefits_charity">Benefits charity</string>
  <string name="lbl_dominic_ovo2">\@dominic_ovo</string>
  <string name="msg_super_flash_sale_50">Super Flash Sale
50% Off</string>
  <string name="msg_let_s_get_started">Let\u2019s Get Started</string>
  <string name="lbl_underwear">Underwear</string>
  <string name="lbl_cart">Cart</string>
  <string name="msg_enter_the_street2">Enter the street address 2</string>
  <string name="lbl_card_holder2">Card Holder</string>
  <string name="lbl_or">OR</string>
  <string name="lbl_classified_ads">Classified Ads</string>
  <string name="lbl_pos_reggular">POS Reggular</string>
  <string name="lbl_product">Product</string>
  <string name="lbl_order_details">Order Details</string>
  <string name="lbl_explore">Explore</string>
  <string name="lbl_shirt">Shirt</string>
  <string name="msg_login_with_facebook">Login with facebook</string>
  <string name="msg_air_max_are_always2">air max are always very comfortable fit, clean and just perfect in every way. just the box was too small and scrunched the sneakers up a little bit</string>
  <string name="lbl_heels">Heels</string>
  <string name="lbl_598_86">$598.86</string>
  <string name="msg_super_flash_sale">Super Flash Sale</string>
  <string name="lbl_next">Next</string>
  <string name="msg_enter_the_street">Enter the street address</string>
  <string name="lbl_flash_sale">Flash Sale</string>
  <string name="lbl_deals_savings">Deals &amp; Savings</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_add_review">Add Review</string>
  <string name="lbl_first_name">First Name</string>
  <string name="lbl_priscekila">Priscekila</string>
  <string name="msg_2727_new_owerri">2727 New  Owerri, Owerri, Imo State 78410</string>
  <string name="lbl_sign_in">Sign In</string>
  <string name="lbl_completed_items">Completed Items</string>
  <string name="lbl_review_product">Review Product</string>
  <string name="lbl_man_underwear">Man Underwear</string>
  <string name="lbl_766_86">$766.86</string>
  <string name="lbl_order">Order</string>
  <string name="lbl_listed_as_lots">Listed as Lots</string>
  <string name="lbl_card_holder">CARD HOLDER</string>
  <string name="msg_enter_the_state">Enter the state/province/region</string>
  <string name="msg_forgot_password">Forgot Password?</string>
  <string name="lbl_price">Price</string>
  <string name="msg_nike_air_vapormax2">Nike Air VaporMax Flyknit 3</string>
  <string name="lbl_style">Style:</string>
  <string name="lbl_ship_to">Ship To</string>
  <string name="lbl_5_review">(5 Review)</string>
  <string name="msg_you_might_also_like">You Might Also Like</string>
  <string name="msg_ms_nike_air_max">MS - Nike Air Max 270 React...</string>
  <string name="lbl_mega_sale">Mega Sale</string>
  <string name="msg_special_offer_25">Special Offer 25% OFF</string>
  <string name="msg_6326_9124">6326    9124    8124    9875</string>
  <string name="msg_nike_air_zoom_pegasus2">Nike Air Zoom Pegasus 36 Miami - Special For your Activity</string>
  <string name="lbl_old_password">Old Password</string>
  <string name="msg_please_write_overall">Please write Overall level of satisfaction with your shipping / Delivery Service</string>
  <string name="lbl_item_location">Item Location</string>
  <string name="msg_1_items_purchased">1 Items purchased</string>
  <string name="lbl_your_cart">Your Cart</string>
  <string name="lbl_bank_transfer">Bank Transfer</string>
  <string name="lbl_high_heels">High Heels</string>
  <string name="lbl_activity">Activity</string>
  <string name="msg_april_30_2014_1_01">April 30, 2014 1:01 PM</string>
  <string name="lbl_lailyfa_febrina">Lailyfa Febrina</string>
  <string name="lbl_office_bag">Office Bag</string>
  <string name="msg_credit_card_or_debit">Credit Card Or Debit</string>
  <string name="msg_enter_the_last_name">Enter the last name</string>
  <string name="lbl_payment">Payment</string>
  <string name="lbl_notify_me">Notify Me</string>
  <string name="lbl_24_off">24% Off</string>
  <string name="lbl_street_address">Street Address</string>
  <string name="lbl_asia">Asia</string>
  <string name="lbl_best_product">Best Product</string>
  <string name="lbl_dominic_ovo">Dominic Ovo</string>
  <string name="lbl_specification">Specification</string>
  <string name="msg_1231_2312_3123">1231 - 2312 - 3123 - 1231</string>
  <string name="msg_nike_air_max_97">Nike Air Max 97 Utility</string>
  <string name="msg_distance_nearest">Distance: nearest first</string>
  <string name="lbl_299_43">$299,43</string>
  <string name="msg_time_ending_soonest">Time: ending soonest</string>
  <string name="msg_order_at_e_com">Order at E-com : August 1, 2017</string>
  <string name="msg_price_shipping">Price + Shipping: lowest first</string>
  <string name="lbl_items">Items</string>
  <string name="lbl_99_1234567890">+99 1234567890</string>
  <string name="lbl_sdg1345kjd">SDG1345KJD</string>
</resources>