<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearSortBy"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle{&quot;name&quot;:&quot;onPrimaryContainer&quot;,&quot;opacity&quot;:1}">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarAppBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <ImageView android:id="@+id/imageArrowLeft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrow_left_blue_gray_300"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_left_blue_gray_300"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSortBy"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@string/lbl_sort_by"
                style="@style/txtPoppinsbold16" tools:text="@string/lbl_sort_by"/>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearBestMatch"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_28pxv"
            android:paddingEnd="@dimen/_16pxh"
            android:paddingStart="@dimen/_16pxh" android:paddingTop="@dimen/_28pxv">
            <TextView android:ellipsize="end"
                android:id="@+id/txtBestMatch"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@string/lbl_best_match"
                style="@style/txtPoppinsbold12_1" tools:text="@string/lbl_best_match"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTimeEndingSoonest"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@string/msg_time_ending_soonest"
                style="@style/txtPoppinsbold12" tools:text="@string/msg_time_ending_soonest"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTimeNewlyListed"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@string/msg_time_newly_listed"
                style="@style/txtPoppinsbold12" tools:text="@string/msg_time_newly_listed"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPriceShipping"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@string/msg_price_shipping"
                style="@style/txtPoppinsbold12" tools:text="@string/msg_price_shipping"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPriceShipping1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@string/msg_price_shipping2"
                style="@style/txtPoppinsbold12" tools:text="@string/msg_price_shipping2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDistanceNearest"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@string/msg_distance_nearest"
                style="@style/txtPoppinsbold12" tools:text="@string/msg_distance_nearest"/>
        </LinearLayout>
    </LinearLayout>
</layout>
