<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearProductItem"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_15pxh"
        android:paddingVertical="@dimen/_15pxv" style="@style/groupStyle{&quot;name&quot;:&quot;onPrimaryContainer&quot;,&quot;opacity&quot;:1}cornerRadius">
        <ImageView android:id="@+id/imageImage"
            android:layout_height="@dimen/_109pxh"
            android:layout_width="@dimen/_109pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_5pxh}"
            imageRes="@{@drawable/img_product_image_2}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_product_image_2"/>
        <TextView android:id="@+id/txtMSNikeAirMax"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:text="@string/msg_ms_nike_air_max"
            style="@style/txtPoppinsbold12" tools:text="@string/msg_ms_nike_air_max"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPrice"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:letterSpacing="0.03" android:singleLine="true"
            android:text="@string/lbl_299_43"
            style="@style/txtPoppinsbold12_1" tools:text="@string/lbl_299_43"/>
        <LinearLayout android:id="@+id/linearDiscount"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtOldPrice"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@string/lbl_534_33"
                style="@style/txtPoppinsregular10" tools:text="@string/lbl_534_33"/>
            <TextView android:ellipsize="end" android:id="@+id/txtOffer"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@string/lbl_24_off"
                style="@style/txtPoppinsbold10" tools:text="@string/lbl_24_off"/>
        </LinearLayout>
    </LinearLayout>
</layout>
