<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearFeedItem"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_16pxh"
        android:paddingVertical="@dimen/_16pxv" style="@style/groupStyle{&quot;name&quot;:&quot;onPrimaryContainer&quot;,&quot;opacity&quot;:1}">
        <ImageView android:id="@+id/imageNewProduct"
            android:layout_height="@dimen/_48pxh"
            android:layout_width="@dimen/_48pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_5pxh}"
            imageRes="@{@drawable/img_product_image}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_product_image"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearFeedDetails"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtNewProduct"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@string/lbl_new_product"
                style="@style/txtPoppinsbold14_1" tools:text="@string/lbl_new_product"/>
            <TextView android:id="@+id/txtNikeAirZoomPegasus"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:letterSpacing="0.03"
                android:text="@string/msg_nike_air_zoom_pegasus2"
                style="@style/txtPoppinsregular12" tools:text="@string/msg_nike_air_zoom_pegasus2"/>
            <TextView android:ellipsize="end" android:id="@+id/txtTime"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:letterSpacing="0.03" android:singleLine="true"
                android:text="@string/msg_june_3_2015_5_06"
                style="@style/txtPoppinsregular10_1" tools:text="@string/msg_june_3_2015_5_06"/>
        </LinearLayout>
    </LinearLayout>
</layout>
